manifests/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mealie"
    gethomepage.dev/description: "Rezepte & Essensplanung"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "mealie.png"
    gethomepage.dev/weight: "70"
    gethomepage.dev/pod-selector: "app=mealie"
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.elmstreet79.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 80
